force-app/main/default/objects/ProjectTask__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned To</label>
    <referenceTo>Project_Team_Member__c</referenceTo>
    <relationshipLabel>Project Tasks</relationshipLabel>
    <relationshipName>Project_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>