force-app/main/default/objects/ProjectTask__c/fields/Is_My_Task__c.field-meta.xml
<CustomField>
    <fullName>Is_My_Task__c</fullName>
    <formula>IF( (Assigned_To__r.User__r.Id =  $User.Id ) , TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is My Task</label>
    <type>Checkbox</type>
</CustomField>