force-app/main/default/objects/ProjectTask__c/fields/Milestone__c.field-meta.xml
<CustomField>
    <fullName>Milestone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Milestone</label>
    <referenceTo>Milestone__c</referenceTo>
    <relationshipLabel>Project Tasks</relationshipLabel>
    <relationshipName>Project_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>