force-app/main/default/objects/ProjectTask__c/fields/Parent_Project_Task__c.field-meta.xml
<CustomField>
    <fullName>Parent_Project_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Project Task</label>
    <referenceTo>ProjectTask__c</referenceTo>
    <relationshipLabel>Project Subtasks</relationshipLabel>
    <relationshipName>Project_Subtasks</relationshipName>
    <type>Lookup</type>
</CustomField>