force-app/main/default/objects/ProjectTask__c/fields/PlanedBudged__c.field-meta.xml
<CustomField>
    <fullName>PlanedBudged__c</fullName>
    <label>Planed Budged</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>