force-app/main/default/objects/ProjectTask__c/fields/Planned_Budget_including_Subtasks__c.field-meta.xml
<CustomField>
    <fullName>Planned_Budget_including_Subtasks__c</fullName>
    <label>Planned Budget including Subtasks</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>