force-app/main/default/objects/ProjectTask__c/fields/Project_Task_Type__c.field-meta.xml
<CustomField>
    <fullName>Project_Task_Type__c</fullName>
    <formula>IF( ISBLANK( Parent_Project_Task__c ), &quot;Task&quot;, &quot;Subtask&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Task Type</label>
    <type>Text</type>
</CustomField>