force-app/main/default/objects/ProjectTask__c/fields/Subtasks_Calculated__c.field-meta.xml
<CustomField>
    <fullName>Subtasks_Calculated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Subtasks Calculated</label>
    <type>Checkbox</type>
</CustomField>