force-app/main/default/objects/ProjectTask__c/fields/Used_Budget_including_Subtasks__c.field-meta.xml
<CustomField>
    <fullName>Used_Budget_including_Subtasks__c</fullName>
    <label>Used Budget including Subtasks</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>