force-app/main/default/objects/ProjectTask__c/fields/Used_Person_Days__c.field-meta.xml
<CustomField>
    <fullName>Used_Person_Days__c</fullName>
    <formula>Used_Hours__c /8</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Used Person Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>