force-app/main/default/objects/ProjectTask__c/fields/Used_Person_Days_including_Subtasks__c.field-meta.xml
<CustomField>
    <fullName>Used_Person_Days_including_Subtasks__c</fullName>
    <formula>Used_Hours_including_Subtasks__c /8</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Used Person Days including Subtasks</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>