force-app/main/default/objects/ProjectTask__c/fields/UsedBudget__c.field-meta.xml
<CustomField>
    <fullName>UsedBudget__c</fullName>
    <label>Used Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>