force-app/main/default/objects/ProjectTask__c/listViews/All_Open_Tasks.listView-meta.xml
<ListView>
    <fullName>All_Open_Tasks</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>UsedBudget__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Completed,Canceled</value>
    </filters>
    <label>All Open Tasks</label>
</ListView>