force-app/main/default/objects/ProjectTask__c/listViews/My_Tasks.listView-meta.xml
<ListView>
    <fullName>My_Tasks</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>UsedBudget__c</columns>
    <columns>Description__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_My_Task__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Tasks</label>
</ListView>